--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -105,7 +105,7 @@
   --fs-md: clamp(1.56rem, 1vi + 1.31rem, 2.11rem);
   --fs-lg: clamp(1.95rem, 1.56vi + 1.56rem, 2.81rem);
   --fs-xl: clamp(2.44rem, 2.38vi + 1.85rem, 3.75rem);
-  --fx-xxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
+  --fs-2xl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
 
   --line-height: calc(0.6rem + 2ex);
 
