feat(app): add recent blog articles

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -5,7 +5,7 @@ import Subscribe from './Subscribe.astro'
 
 <footer class="border-t-[1px]">
   <!-- Newsletter CTA -->
-  <div class="flex justify-between flex-wrap gap-4 p-12 container">
+  <div class="container-lg flex justify-between flex-wrap gap-4 p-12">
     <div class="flex flex-col gap-4">
       <h3 class="text-md">Get notified when I publish new articles</h3>
       <p>Stay up to date with the latest news, announcements, and articles.</p>
@@ -16,7 +16,7 @@ import Subscribe from './Subscribe.astro'
 
   <!-- Main footer items -->
   <div class="bg-red-900 text-white">
-    <div class="p-12 container grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12">
+    <div class="container-lg p-12 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12">
       <div>
         <Icon name="logo" class="size-20 md:size-24 mb-4" />
         <p class="text-red-200">Life coaching for preconception, pregnancy, and beyond</p>
