--- a/src/components/ui/ImageAndText.astro
+++ b/src/components/ui/ImageAndText.astro
@@ -18,15 +18,8 @@ export interface Props {
 const { image, imageAlt, title, text } = Astro.props
 ---
 
-<div
-  class="max-w-xl md:max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-16 justify-items-center items-center"
->
-  <Picture
-    class="w-full drop-shadow-sm lsa lsa-slide-up no-repeat"
-    src={image}
-    loading="eager"
-    alt={imageAlt}
-  />
+<div class="container-md grid grid-cols-1 md:grid-cols-2 gap-16 justify-items-center items-center">
+  <Picture class="lsa lsa-slide-up no-repeat" src={image} alt={imageAlt} />
   <article class="flex flex-col items-center md:items-start gap-8 text-center md:text-left">
     <SectionHeader title={title} />
     <p class="lsa lsa-slide-up no-repeat delay-200" set:html={text} />
