--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout title="Power Passenger Passage | Blog">
   <PageHeader
-    title='<span class="font-bold text-red-900">Empower</span> Your Healthcare Journey'
+    title='<span class="font-bold text-xl text-red-900">Empower</span> Your Healthcare Journey'
     subtitle="Explore insights and resources designed to guide women on their personal healthcare journey. From finding peace in pregnancy to reclaiming control of your well-being, our blog is here to inspire, inform, and empower."
   >
     <Subscribe class="mx-auto" />
