fix(app): CTA image height, SectionHeader alignment

--- a/src/components/ui/PageHeader.astro
+++ b/src/components/ui/PageHeader.astro
@@ -33,7 +33,7 @@ const { title, subtitle, image, imageAlt } = Astro.props
         </div>
 
         <Picture
-          class="w-full max-h-[500px] rounded-[125px_24px_125px_125px] shadow-sm lsa lsa-slide-up no-repeat delay-700"
+          class="w-auto max-h-[500px] rounded-[125px_24px_125px_125px] shadow-sm lsa lsa-slide-up no-repeat delay-700"
           src={image}
           loading="eager"
           alt={imageAlt}
