--- a/src/components/ui/ImageAndText.astro
+++ b/src/components/ui/ImageAndText.astro
@@ -21,7 +21,7 @@ const { image, imageAlt, title, text } = Astro.props
 <div class="container-md grid grid-cols-1 md:grid-cols-2 gap-16 justify-items-center items-center">
   <Picture class="lsa lsa-slide-up no-repeat" src={image} alt={imageAlt} />
   <article class="flex flex-col items-center md:items-start gap-8 text-center md:text-left">
-    <SectionHeader title={title} />
+    <SectionHeader title={title} class="items-center md:items-start text-center" />
     <p class="lsa lsa-slide-up no-repeat delay-200" set:html={text} />
     <div class="lsa lsa-slide-up no-repeat delay-500">
       <slot />
