feat(app): add svg design elements to life-coaching section

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -3,7 +3,7 @@ import { Icon } from 'astro-icon/components'
 import Subscribe from './Subscribe.astro'
 ---
 
-<footer class="border-t-[1px]">
+<footer class="relative z-10 border-t-[1px]">
   <!-- Newsletter CTA -->
   <div class="container-lg flex justify-between flex-wrap gap-4 p-12">
     <div class="flex flex-col gap-4">
